"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/Makefile.am: Change svnversion.h generation to not update the file
   unless it needs updating.
Alex Schultz 2006-11-09

Fix problem in display logic when the size of the image was not a multiple
of the map_image_size.  This shows up when using tall character images.
It also shows up when using different -mapscale options due to rounding
errors - in both cases now, things are drawn correctly.
--
gtk/map.c: Add size parameters to draw_pixmap().  Add logic to figure out 
  proper offsets for drawing odd sized images.
gtk/sdl.c: Add logic to figure out proper offsets for drawing these odd
  sized images.
gtk-v2/src/map.c: Add size parameters to draw_pixmap().  Add logic to figure
  out proper offsets for drawing odd sized images.
gtk-v2/src/sdl.c: Add logic to figure out proper offsets for drawing these
  odd sized images.
MSW 2006-11-05

gtk/image.c: Fix bug that results in SDL mode not working if map_scale and
  icon_scale are the same - can't use GDK pixmaps for SDL drawing.
MSW 2006-11-05

Fix bug 1559804 - unable to drop items from inventory into open container
on the ground.
gtk-v2/src/inventory.c: Add check to see if container is on the ground in
  addition to being in the player inventory as a valid drop target.
MSW 2006-11-03

Add ability for client to get exp table from server.  Add exp progressbar
to GTK2 client.
--
common/client.c: Add declarations for exp_table, exp_table_max, and call to
  send 'requestinfo exp_table' to server.
common/client.h: Add extern declarations for exp_table, exp_table_max
common/commands.c: Add get_exp_info() function to get exp table from 
  server in replyinfo command.  Fix crash bug in ReplyInfoCmd() if replyinfo
  with no parameters is sent to client.
common/init.c: Add code to clear/initialize exp_table, exp_table_max
gtk-v2/gtk-v2.glade: Add exp progessbar widget.
gtk-v2/src/gtk2proto.h: rebuilt