@@ -3435,8 +3435,8 @@ item'', ``pick up 1 item and stop'', ``stop before picking up'', ``pick up all i
 #define PU_MAGIC_DEVICE		0x00800000
 
 #define PU_NOT_CURSED		0x01000000
-
-#define PU_JEWELS			0x02000000
+#define PU_JEWELS		0x02000000
+#define PU_FLESH		0x04000000
 
   /* root of the NEWPickup menu */
   newpickupmenu = gtk_menu_new();
@@ -3643,6 +3643,13 @@ item'', ``pick up 1 item and stop'', ``stop before picking up'', ``pick up all i
   gtk_menu_append(GTK_MENU(newpickupmenu), menu_items);
   gtk_signal_connect(GTK_OBJECT(menu_items), "activate",
 	GTK_SIGNAL_FUNC(new_menu_pickup), GINT_TO_POINTER(PU_DRINK));
+  gtk_widget_show(menu_items);
+
+  menu_items = gtk_check_menu_item_new_with_label("Flesh");
+  gtk_check_menu_item_set_show_toggle(GTK_CHECK_MENU_ITEM(menu_items), TRUE);
+  gtk_menu_append(GTK_MENU(newpickupmenu), menu_items);
+  gtk_signal_connect(GTK_OBJECT(menu_items), "activate",
+	GTK_SIGNAL_FUNC(new_menu_pickup), GINT_TO_POINTER(PU_FLESH));
   gtk_widget_show(menu_items);
 
   menu_items = gtk_check_menu_item_new_with_label("Valuables (Money, Gems)");
